Fixed menu truncation

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -44,8 +44,7 @@
 .flex-parent {
     display:flex;
     align-items: flex-start;
-    padding: 10px;
-    margin: 30px;
+    margin: 5px 5px 10px;
 }
 
 .card-text .truncated {
